tests/NormalTests/paczka1/fuzzy1/72999497.err
Error in line 8: FJfrhnU S361 23,0
Error in line 26: fe0z4X S361 24,9
Error in line 29: A181 S361 56,6
